<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:padding="25dip">

    <TableRow>
        <TextView
            android:text="@string/help_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/helpText"
            android:layout_weight="1" />
    </TableRow>
    <!--<View style="@style/separador" />-->
    <TableRow style="@style/helpRow">
        <LinearLayout
            android:id="@+id/moveBlockHolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/help_block_padd_top"
            android:paddingRight="@dimen/help_img_padd_right"
            android:layout_weight="0.3"
            android:orientation="horizontal"
            >
        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/help_move_block"
            android:paddingTop="@dimen/help_text_padd_top"
            android:layout_weight="0.7"
            style="@style/helpText"
            />
    </TableRow>
        <TableRow style="@style/helpRow">
            <LinearLayout
                android:id="@+id/speedBlockHolder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/help_block_padd_top"
                android:paddingRight="@dimen/help_img_padd_right"
                android:layout_weight="0.3"
                android:orientation="horizontal"
                >
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/help_speed_block"
                android:paddingTop="@dimen/help_text_padd_top"
                android:layout_weight="0.7"
                style="@style/helpText"
                />
        </TableRow>
        <TableRow style="@style/helpRow">
            <LinearLayout
                android:id="@+id/waitBlockHolder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/help_block_padd_top"
                android:paddingRight="@dimen/help_img_padd_right"
                android:layout_weight="0.3"
                android:orientation="horizontal"
                >
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/help_wait_block"
                android:paddingTop="@dimen/help_text_padd_top"
                style="@style/helpText"
                android:layout_weight="0.7"
                />
        </TableRow>
        <TableRow style="@style/helpRow">
            <LinearLayout
                android:id="@+id/positionBlockHolder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/help_block_padd_top"
                android:paddingRight="@dimen/help_img_padd_right"
                android:layout_weight="0.3"
                android:orientation="horizontal"
                >
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/help_position_block"
                android:paddingTop="@dimen/help_text_padd_top"
                style="@style/helpText"
                android:layout_weight="0.7"
                />
        </TableRow>
        <TableRow style="@style/helpRow">
            <LinearLayout
                android:id="@+id/repeatBlockHolder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/help_block_padd_top"
                android:paddingRight="@dimen/help_img_padd_right"
                android:layout_weight="0.3"
                android:orientation="horizontal"
                >
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/help_repeat_block"
                android:paddingTop="@dimen/help_text_padd_top"
                style="@style/helpText"
                android:layout_weight="0.7"
                />
        </TableRow>
        <TableRow style="@style/helpRow">
            <LinearLayout
                android:id="@+id/numberSensorBlockHolder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/help_block_padd_top"
                android:paddingRight="@dimen/help_img_padd_right"
                android:layout_weight="0.3"
                android:orientation="horizontal"
                >
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/help_numberSensor_block"
                android:paddingTop="@dimen/help_text_padd_top"
                style="@style/helpText"
                android:layout_weight="0.7"
                />
        </TableRow>
        <TableRow style="@style/helpRow">
            <LinearLayout
                android:id="@+id/colorSensorBlockHolder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/help_block_padd_top"
                android:paddingRight="@dimen/help_img_padd_right"
                android:layout_weight="0.3"
                android:orientation="horizontal"
                >
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/help_colorsensor_block"
                android:paddingTop="@dimen/help_text_padd_top"
                style="@style/helpText"
                android:layout_weight="0.7"
                />
        </TableRow>

    </TableLayout>
    </ScrollView>
</LinearLayout>
